--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MADAM MONOROM | HTML CSS Sandbox </title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
